# diploma

./: Dockerfile  docker-compose-local.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/workflows/: pub_on_release.yaml
admin/: main.py  wsgi.py
admin/templates/: home.html  sensor.html  styles.css
backend/: main.py  settings.py
backend/api/: device.py  sensor.py  sensor_info.py
backend/db/: config.py  models.py
backend/service/: base.py  device.py  sensor.py  sensor_info.py
