[tool.poetry]
name = "diploma"
version = "0.1.0"
description = ""
authors = ["gmonitor <seregin.da@didenok.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
sqlmodel = "^0.0.8"
python-dotenv = "^0.21.0"
asyncpg = "^0.27.0"
Flask = "^2.2.2"
Flask-Admin = "^1.6.0"
gunicorn = "^20.1.0"
flask-sqlalchemy = "^3.0.2"
psycopg2-binary = "^2.9.5"
Flask-BabelEx = "^0.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
